--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "mini-store",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "lint": "eslint .",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
@@ -25,6 +26,7 @@
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "jest": "^29.6.1",
     "prettier": "^3.0.0"
   }
 }
