--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.1",
+    "nodemon": "^3.0.1",
     "prettier": "^3.0.0"
   }
 }
