--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "lint": "eslint .",
-    "format": "prettier --write .",
-    "test": "jest"
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -28,7 +27,6 @@
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.6.1",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.0"
   }
